src/objects/Session_Speaker__c.object
<CustomObject>
    <description>Speaker records associated with each session</description>
    <fields>
        <fullName>Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Session Speakers (Assistant)</relationshipLabel>
        <relationshipName>Assistants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscloserId__c</fullName>
        <externalId>true</externalId>
        <label>Discloser ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>Session Speakers</relationshipLabel>
        <relationshipName>Session_Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presentation_Order__c</fullName>
        <label>Presentation Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Time__c</fullName>
        <label>Presentation Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Reply_Date__c</fullName>
        <description>Date speaker replied to invitation</description>
        <label>Reply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <description>Speaker roles for a particular session</description>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chair</fullName>
                </value>
                <value>
                    <fullName>Cochair</fullName>
                </value>
                <value>
                    <fullName>Program Committee Member</fullName>
                </value>
                <value>
                    <fullName>Scientific Committee Member</fullName>
                </value>
                <value>
                    <fullName>Organizing Committee Member</fullName>
                </value>
                <value>
                    <fullName>Executive Committee Member</fullName>
                </value>
                <value>
                    <fullName>Program Committee Chair</fullName>
                </value>
                <value>
                    <fullName>Program Committee Cochair</fullName>
                </value>
                <value>
                    <fullName>Scientific Committee Chair</fullName>
                </value>
                <value>
                    <fullName>Scientific Committee Cochair</fullName>
                </value>
                <value>
                    <fullName>Keynote Speaker</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Session Chair</fullName>
                </value>
                <value>
                    <fullName>Discussant</fullName>
                </value>
                <value>
                    <fullName>Moderator</fullName>
                </value>
                <value>
                    <fullName>Panelist</fullName>
                </value>
                <value>
                    <fullName>Proffered Presenter</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Codirector</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Lab Director</fullName>
                </value>
                <value>
                    <fullName>Lab Assistant</fullName>
                </value>
                <value>
                    <fullName>Lecturer</fullName>
                </value>
                <value>
                    <fullName>Observer</fullName>
                </value>
                <value>
                    <fullName>Short-talk Presenter</fullName>
                </value>
                <value>
                    <fullName>Organizing Committee Chair</fullName>
                </value>
                <value>
                    <fullName>Organizing Committee Cochair</fullName>
                </value>
                <value>
                    <fullName>Executive Committee Chair</fullName>
                </value>
                <value>
                    <fullName>Executive Committee Cochair</fullName>
                </value>
                <value>
                    <fullName>Abstract Review Committee Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session</label>
        <referenceTo>AACR_Session__c</referenceTo>
        <relationshipLabel>Session Speakers</relationshipLabel>
        <relationshipName>Session_Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Session Speakers</relationshipLabel>
        <relationshipName>Session_Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;--None--&quot;</defaultValue>
        <description>Status of speakers invitation</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Negotiating</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Suggested</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                    <isActive>false</isActive>
                    <label>Considering</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_for_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use for Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cc assistant</label>
        <type>Checkbox</type>
    </fields>
    <label>Session Speaker</label>
    <nameField>
        <label>Presentation Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Speakers</pluralLabel>
    <recordTypes>
        <fullName>Chair_Person</fullName>
        <active>true</active>
        <description>Chair person at event</description>
        <label>Chair Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>Session_Speaker</fullName>
        <active>true</active>
        <description>Speaker at session</description>
        <label>Session Speaker</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Time_Validation</fullName>
        <active>false</active>
        <description>Presentation time must start before the end of the session</description>
        <errorConditionFormula>Presentation_Time__c &gt;=  Session__r.End_Time__c</errorConditionFormula>
        <errorMessage>Presentation Time must be within the session.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_Validation</fullName>
        <active>false</active>
        <description>Start time must be after session start time</description>
        <errorConditionFormula>Presentation_Time__c &lt;  Session__r.Start_Time__c</errorConditionFormula>
        <errorMessage>Presentation Time must be within the session.</errorMessage>
    </validationRules>
</CustomObject>